Add list & html pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
 
 <body>
     <section>
-        <nav class="nav"></nav>
+        <header>
+            <nav class="nav">
+                <ul class="navbar">
+                    <li class="nav-index">
+                        <a class="navi" href="./index.html">Accueil</a>
+                    </li>
+                    <li class="nav-go">
+                        <a class="navi" href="./wtgo.html">Où Aller</a>
+                    </li>
+                    <li class="nav-do">
+                        <a class="navi" href="./wtdo.html">Que Faire</a>
+                    </li>
+                    <li class="nav-contact">
+                        <a class="navi" href="./contact-page.html">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <section id="total" class="total">
             <section id="top-part" class="top-part"></section>
             <section id="left-part" class="left-part"></section>
